k8s/flux-system/webhook/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    kubernetes.io/ingress.class: "nginx"

spec:
  ingressClassName: "nginx"
  rules:
  - host: flux-webhook.fyksen.me
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: webhook-receiver
            port:
              number: 80
  tls:
  - hosts:
    - "flux-webhook.fyksen.me"
    secretName: flux-webhook.fyksen.me
